# Near-Intersect

./: 9_LAW_BINDING_LAYER.md  DEPLOYMENT.md  DIAGNOSTIC_GRAPH_v0.md  INTENT.txt  LICENSE  MODULE_08_OUTPACE_INFLATION.md  MODULE_13_TREASURY_PERFORMANCE.md  Module 1: FixedSupply  Module 3: TimeLock  Module 8: OutpaceInflation  Near-Intersect Security Kernel  OIM_BINDING.md  OIM_INVARIANTS.md  README.md  README.md.  REGISTRY_CERTIFICATION_DEPLOYMENT.md  Valued_USD_MarketSale.md  WASM_COMPILATION_BOUNDARY.md  WHITEPAPER.md  index.html  module_12_externality_proof.rs  near_intersect_factory.wasm  near_intersect_factory.wasm (NEW)  near_intersect_factory.wasm 6
.github/workflows/: main.yml
DOCTRINE/: OIM_UPSTREAM.md
constitution/: MANIFEST_SHA256.txt listing each file + SHA256.
contract/: Cargo.toml
contract/src/:  Factory.rs   factory.rs  factory.rs  law.rs  lib.rs  oim.rs
docs/architecture/: FACTORY_VALIDATION_PIPELINE.md
docs/doctrine/: CAPITAL_PARTICIPATION_MODEL.md
scripts/: deploy.sh
