[package]
name = "near_intersect_factory"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = "3.1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
overflow-checks = true

[patch.crates-io]
parity-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1.git", package = "parity-secp256k1" }
